--- a/pit_app/templates/search/results.html
+++ b/pit_app/templates/search/results.html
@@ -21,13 +21,13 @@
       <table class="table table-striped table-bordered dataTable no-footer tgeTable" id="tgeSearch">
         <thead>
           <tr>
-            <th>Accession Number</th>
-            <th>TGE Type(s)</th>
-            <th>Uniprot ID(s)</th>
-            <th>Organism(s)</th>
-            <th>#Observations</th>
-            <th>#Samples</th>
-            <th>Length</th>
+            <th>Accession Number&nbsp;<a class="popoverData" href="#" data-content="Unique identifier of a TGE in the PITDB database." rel="popover" data-placement="top" data-original-title="TGE Accession" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+            <th>TGE Type(s)&nbsp;<a class="popoverData" href="#" data-content="One TGE may have multiple types, as it may have a different status in different species. Use the table’s search and sort capabilities to look for specific TGEs or TGE types." rel="popover" data-placement="top" data-original-title="TGE Type(s)" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+            <th>Uniprot ID(s)&nbsp;<a class="popoverData" href="#" data-content="Accession number of homologous Uniprot protein (if there is one). Click the accession number to see what else the database knows about this protein." rel="popover" data-placement="top" data-original-title="Uniprot ID(s)" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+            <th>Organism(s)&nbsp;<a class="popoverData" href="#" data-content="" rel="popover" data-placement="top" data-original-title="Organism(s)" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+            <th>#Observations&nbsp;<a class="popoverData" href="#" data-content="The number of times the TGE has been observed. A TGE observation comprises an experimentally derived RNA-seq transcript together with experimentally derived peptide evidence from mass spectrometry performed on the same sample. " rel="popover" data-placement="top" data-original-title="Number of observations" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a></th>
+            <th>#Samples&nbsp;<a class="popoverData" href="#" data-content="" rel="popover" data-placement="top" data-original-title="Number of samples" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a></th>
+            <th>Length&nbsp;<a class="popoverData" href="#" data-content="" rel="popover" data-placement="top" data-original-title="Length" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a></th>
           </tr>
         </thead>
       	<tbody>
