--- a/pit_app/templates/results/experiment.html
+++ b/pit_app/templates/results/experiment.html
@@ -31,11 +31,10 @@
         <div class="panel-body">
           <div class="row" style="margin-left:5px">
             <!-- <label>Data submitted by the user:</label> {{ summary.user }}</br></br> -->
-            <strong>Number of instances for:</strong><br/>
-            <label style="margin-top: 18px">TGEs <a class="popoverData" href="#" data-content="" rel="popover" data-placement="bottom" data-original-title="Translated Genomic Element (TGE)" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.tgeNum }}</br>
-            <label>Samples <a class="popoverData" href="#" data-content="" rel="popover" data-placement="bottom" data-original-title="Samples" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.sampleNum }}</br>
-            <label>Transcripts <a class="popoverData" href="#" data-content="" rel="popover" data-placement="bottom" data-original-title="Transcripts" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.trnNum }}<br/>
-            <label>Peptides <a class="popoverData" href="#" data-content="" rel="popover" data-placement="bottom" data-original-title="Peptides" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.pepNum }}
+            <label style="margin-top: 5px">TGEs <a class="popoverData" href="#" data-content="Total number of unique translated genomic elements observed in this experiment (some may have been identified more than once)" rel="popover" data-placement="bottom" data-original-title="Translated genomic element (TGE)" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.tgeNum }}</br>
+            <label>Samples <a class="popoverData" href="#" data-content="Number of individual sample in this experiment." rel="popover" data-placement="bottom" data-original-title="Samples" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.sampleNum }}</br>
+            <label>Transcripts <a class="popoverData" href="#" data-content="Number of unique transcripts assembled for RNA-seq data collected in this experiment." rel="popover" data-placement="bottom" data-original-title="Transcripts" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.trnNum }}<br/>
+            <label>Peptides <a class="popoverData" href="#" data-content="Number of peptides identified in this sample using mass spectrometry." rel="popover" data-placement="bottom" data-original-title="Peptides" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.peptAll }} ({{ summary.peptUniq }} unique)
         	</div>
         </div>
       </div>
@@ -56,7 +55,6 @@
           <a class="btn pull-right popoverData" href="#" data-content="Visual summary of the Translated Genomic Elements (TGEs) identified, together with their type and information about their supporting peptides. Move the mouse cursor over the plot for quantitative information." rel="popover" data-placement="left" data-original-title="Graph Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
         </div>
         
-        <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of experiment breakdown</h5></p></span>
         <div class="col-md-8 col-md-offset-2">
           <div id="sequence"></div>
           <div id="chart">
@@ -81,6 +79,7 @@
                 <th>Sample ID&nbsp;<a class="popoverData" href="#" data-content="The accession number of a sample in the PITDB database." rel="popover" data-placement="bottom" data-original-title="Sample ID" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
                 <th>Sample Name&nbsp;<a class="popoverData" href="#" data-content="Detailed sample name" rel="popover" data-placement="bottom" data-original-title="Sample Name" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
                 <th>Instances of TGEs&nbsp;<a class="popoverData" href="#" data-content="Number of TGEs observed in each sample." rel="popover" data-placement="bottom" data-original-title="Instances of TGEs" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+                <th>Unique Peptide Count&nbsp;<a class="popoverData" href="#" data-content="Number of unique peptides identified in this sample using mass spectrometry." rel="popover" data-placement="bottom" data-original-title="Peptide Count" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
               </tr>
             </thead>
             <tbody>
@@ -89,6 +88,7 @@
                   <td>{{ sample.id }}</td>
                   <td>{{ sample.name }}</td>
                   <td>{{ sample.tgeNum }}</td>
+                  <td>{{ sample.pepNum }}</td>
                 </tr>
               {% endfor %}
             </tbody>
