--- a/pit_app/templates/results/tge.html
+++ b/pit_app/templates/results/tge.html
@@ -29,24 +29,37 @@
           <div class="panel panel-default" id="tgeSummary">
             <div class="panel-heading">
               <i class="fa fa-bar-chart-o fa-fw"></i> Summary 
-              <a class="btn pull-right popoverData" href="#" data-content="Summary of everything the database contains about this particular Translated Genomic Element (TGE)." rel="popover" data-placement="left" data-original-title="Summary Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+              <a class="btn pull-right popoverData" href="#" data-content="Summary of everything the database contains about this particular translated genomic element (TGE)." rel="popover" data-placement="left" data-original-title="Summary Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
             </div>
             
             <div class="panel-body">
               <div class="row" style="margin-left:5px">
                 <label>TGE ID 
-                <a class="popoverData" href="#" data-content="Unique identifier of the Translated Genomic Element (TGE) in the database." rel="popover" data-placement="bottom" data-original-title="TGE ID" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.tge.id }}</br>
+                <a class="popoverData" href="#" data-content="Unique identifier of the translated genomic element (TGE) in the database." rel="popover" data-placement="bottom" data-original-title="TGE ID" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.tge.accession }}</br>
                 <label>TGE Type(s)
-                <a class="popoverData" href="#" data-content="The type of Translated Genomic Element (TGE), inferred from searching against reference databases (e.g. Uniprot)." rel="popover" data-placement="bottom" data-original-title="TGE Type(s)" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.tgeClasses|join(', ') }}</br>
-                <label>Uniprot ID(s)
-                <a class="popoverData" href="#" data-content="The accession number(s) of any proteins to which the TGE has sequence homology." rel="popover" data-placement="bottom" data-original-title="Uniprot ID(s)" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label>
-                {% for uniprotID in summary.uniprotIDs %}
-                  <a href="protein?uniprot={{ uniprotID }}">{{ uniprotID }}</a>{% if not loop.last %},{% endif %}
-                {% endfor %}</br>
+                <a class="popoverData" href="#" data-content="The type of translated genomic element (TGE), inferred from searching against reference databases (e.g. UniProt)." rel="popover" data-placement="bottom" data-original-title="TGE Type(s)" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.tgeClasses }}</br>
                 <label>Organism(s)
                 <a class="popoverData" href="#" data-content="The organism(s) in which the TGE has been observed." rel="popover" data-placement="bottom" data-original-title="Organism(s)" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> 
-                {% for org in summary.organisms %}
+                {% for org in summary.organisms.split(',') %}
                   <a href="organism?organism={{ org }}">{{ org }}</a>{% if not loop.last %},{% endif %}
+                {% endfor %}</br>
+                <label>UniProt ID(s)
+                <a class="popoverData" href="#" data-content="The accession number(s) of any proteins to which the TGE has sequence homology." rel="popover" data-placement="bottom" data-original-title="UniProt ID(s)" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label>
+                {% for uniprotID in summary.uniprotIDs.split(',') %}
+                  {% if uniprotID != '-' %}
+                    <a href="protein?uniprot={{ uniprotID }}">{{ uniprotID }}</a>
+                  {% else %}
+                    <span style="font-size:18px">{{ uniprotID }}</span>
+                  {% endif %}{% if not loop.last %},{% endif %}
+                {% endfor %}</br>
+                <label>Gene(s)
+                <a class="popoverData" href="#" data-content="Name of parent gene(s)." rel="popover" data-placement="bottom" data-original-title="Gene(s)" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label>
+                {% for gene in summary.genes.split(',') %}
+                  {% if gene != '-' %}
+                    <a href="gene?gene={{ gene }}">{{ gene }}</a>
+                  {% else %}
+                    <span style="font-size:18px">{{ gene }}</span>
+                  {% endif %}{% if not loop.last %},{% endif %}
                 {% endfor %}</br>
                 <label>Number of observations 
                 <a class="popoverData" href="#" data-content="The number of times the TGE has been observed. A TGE observation comprises an experimentally derived RNA-seq transcript together with experimentally derived peptide evidence from mass spectrometry performed on the same sample. " rel="popover" data-placement="bottom" data-original-title="Number of observations" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.obsCount }}</br>
@@ -57,10 +70,9 @@
         <div id="tgeGraph" class="panel panel-default sunburst" style="position: relative !important;">
           <div class="panel-heading">
             <i class="fa fa-pie-chart fa-fw"></i> Graph 
-            <a class="btn pull-right popoverData" href="#" data-content="Visual summary of the distribution of this particular Translated Genomic Element (TGE) by species and sample, combined with a summary of peptide evidence. Move the mouse cursor over the plot for more detailed information." rel="popover" data-placement="left" data-original-title="Graph Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+            <a class="btn pull-right popoverData" href="#" data-content="Visual summary of the distribution of this particular translated genomic element (TGE) by species and sample, combined with a summary of peptide evidence. Move the mouse cursor over the plot for more detailed information." rel="popover" data-placement="left" data-original-title="Graph Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
           </div>
           
-          <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of TGE breakdown</h5></p></span>
           <div class="col-md-8 col-md-offset-2">
             <div id="sequence"></div>
             <div id="chart">
@@ -75,7 +87,7 @@
         <div class="panel panel-default" id="tgeBreakdown">
           <div class="panel-heading">
             <i class="fa fa-table fa-fw"></i> Translated Genomic Elements (TGEs)
-            <a class="btn pull-right popoverData" href="#" data-content="Experimentally derived unique sequence of the TGE, together with a table listing all the observations of this TGE." rel="popover" data-placement="left" data-original-title="Translated Genomic Elements (TGEs)" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+            <a class="btn pull-right popoverData" href="#" data-content="Experimentally derived unique sequence of the TGE, together with a table listing all the observations of this TGE." rel="popover" data-placement="left" data-original-title="Translated genomic elements (TGEs)" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
           </div>
           
           <div class="panel-body">
@@ -86,9 +98,9 @@
                 <tr>
                   <th></th>
                   <th>Observation&nbsp;<a class="popoverData" href="#" data-content="A TGE observation comprises an experimentally derived RNA-seq transcript together with experimentally derived peptide evidence from mass spectrometry performed on the same sample. Click the observation name to view the transcript." rel="popover" data-placement="bottom" data-original-title="Observation" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
-                  <th>Uniprot&nbsp;<a class="popoverData" href="#" data-content="Accession number of homologous Uniprot protein (if there is one). Click the accession number to see further information about this protein." rel="popover" data-placement="bottom" data-original-title="Uniprot" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a></th>
+                  <th>UniProt&nbsp;<a class="popoverData" href="#" data-content="Accession number of homologous UniProt protein (if there is one). Click the accession number to see further information about this protein." rel="popover" data-placement="bottom" data-original-title="UniProt" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a></th>
                   <th>Organism&nbsp;<a class="popoverData" href="#" data-content="Organism in which this particular observation occurred." rel="popover" data-placement="bottom" data-original-title="Organism" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
-                  <th>Type & Strand&nbsp;<a class="popoverData" href="#" data-content="<ul><li>The 'type' attribute indicates whether the protein is 'complete', containing a start and a stop codon; '5prime_partial', meaning it's missing a start codon and presumably part of the N-terminus; '3prime_partial', meaning it's missing the stop codon and presumably part of the C-terminus; or 'internal', meaning it's both 5prime-partial and 3prime-partial.</li><br/> <li>Strand indicates which strand the coding region is found on.</li>" rel="popover" data-placement="bottom" data-original-title="Type&nbsp;&&nbsp;Strand&nbsp;" data-html="true" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+                  <th>Type & Strand&nbsp;<a class="popoverData" href="#" data-content="<ul><li>The 'type' attribute indicates whether the protein is 'complete', containing a start and a stop codon; '5prime_partial', meaning it's missing a start codon and presumably part of the N-terminus; '3prime_partial', meaning it's missing the stop codon and presumably part of the C-terminus; or 'internal', meaning it's both 5prime-partial and 3prime-partial.</li><br/> <li>Strand (shown in parentheses) indicates which strand the coding region was found on..</li>" rel="popover" data-placement="bottom" data-original-title="Type&nbsp;&&nbsp;Strand&nbsp;" data-html="true" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
                   <th>Identified<br/>Peptides&nbsp;<a class="popoverData" href="#" data-content="Experimentally identified peptides mapping to this TGE for this specific observation." rel="popover" data-placement="bottom" data-original-title="Identified Peptides" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
                   <th>Sample&nbsp;<a class="popoverData" href="#" data-content="The ID of the sample in which the observation occurred." rel="popover" data-placement="bottom" data-original-title="Sample" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a></th>
                   <th>Experiment&nbsp;<a class="popoverData" href="#" data-content="The experiment in which this TGE observation was obtained. Click the experiment accession number for more information." rel="popover" data-placement="bottom" data-original-title="Experiment" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
@@ -98,7 +110,7 @@
                 {% for res in results %}
                   <tr>
                     <td>{{ res.peptide_num }}</td>
-                    <td><a href="transcript?obsID={{ res.id }}">{{ res.observation }}</a></td>
+                    <td><a href="transcript?obsID={{ res.id }}&accession={{ summary.tge.accession }}">{{ res.observation }}</a></td>
                     <td><a href="protein?uniprot={{ res.uniprotID }}">{{ res.uniprotID }}</a></td>                  
                     <td class="wordwrap"><a href="organism?organism={{ res.organism }}">{{ res.organism }}</a></td>
                     <td >{{ res.type }}&nbsp;({{ res.strand }})</td>
