--- a/pit_app/templates/layoutGenoverse.html
+++ b/pit_app/templates/layoutGenoverse.html
@@ -37,7 +37,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-left">
-            <li id="page-content"></li>
+            <li style="font-weight: bold; font-size: 22px; font-family: "Trebuchet MS", Helvetica, sans-serif"><a href="/">PITDB</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right" style="font-weight: bold; font-size: 15.5px">
             <li><a href="/#about">About</a></li>
