Gene name to gene symbol

--- a/pit_app/templates/layoutGenoverse.html
+++ b/pit_app/templates/layoutGenoverse.html
@@ -105,7 +105,7 @@
                   <li><label>TGE:</label> Find PIT evidence for a specific translated genomic element (TGE) by searching for its accession number (e.g. TGE001234) or amino acid sequence.</li>
                   <li><label>Experiment:</label> View summary information for a particular experiment ID, e.g. experiment 4.</li>
                   <li><label>Protein:</label> Find TGEs corresponding to a specific protein, identified by its Uniprot ID, e.g. P12111.</li>
-                  <li><label>Gene:</label> Search by gene name to find TGEs that are products of that gene.</li>
+                  <li><label>Gene:</label> Search by gene symbol to find TGEs that are products of that gene.</li>
                   <li><label>Species:</label> Find all TGEs observed for a particular species, selected from the drop down list.</li>
                 </ul>
                 </p>
@@ -129,7 +129,7 @@
                   </optgroup>
                   <option disabled role="separator" class="divider"></li>
                   <optgroup label="Gene">
-                    <option>Gene Name</option>
+                    <option>Gene Symbol</option>
                   </optgroup>
                   <!-- <option role="separator" class="divider"></li> -->
                   <!-- <optgroup label="Peptide">
