--- a/pit_app/templates/results/tge.html
+++ b/pit_app/templates/results/tge.html
@@ -29,7 +29,7 @@
           <div class="panel panel-default" id="tgeSummary">
             <div class="panel-heading">
               <i class="fa fa-bar-chart-o fa-fw"></i> Summary 
-              <a class="btn pull-right popoverData" href="#" data-content="Summary of everything the database contains about this particular translated genomic element (TGE)." rel="popover" data-placement="left" data-original-title="Summary Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+              <a class="btn pull-right popoverData"  data-content="Summary of everything the database contains about this particular translated genomic element (TGE)." rel="popover" data-placement="left" data-original-title="Summary Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
             </div>
             
             <div class="panel-body">
@@ -70,7 +70,7 @@
         <div id="tgeGraph" class="panel panel-default sunburst" style="position: relative !important;">
           <div class="panel-heading">
             <i class="fa fa-pie-chart fa-fw"></i> Graph 
-            <a class="btn pull-right popoverData" href="#" data-content="Visual summary of the distribution of this particular translated genomic element (TGE) by species and sample, combined with a summary of peptide evidence. Move the mouse cursor over the plot for more detailed information." rel="popover" data-placement="left" data-original-title="Graph Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+            <a class="btn pull-right popoverData"  data-content="Visual summary of the distribution of this particular translated genomic element (TGE) by species and sample, combined with a summary of peptide evidence. Move the mouse cursor over the plot for more detailed information." rel="popover" data-placement="left" data-original-title="Graph Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
           </div>
           
           <div class="col-md-8 col-md-offset-2">
@@ -87,7 +87,7 @@
         <div class="panel panel-default" id="tgeBreakdown">
           <div class="panel-heading">
             <i class="fa fa-table fa-fw"></i> Translated Genomic Elements (TGEs)
-            <a class="btn pull-right popoverData" href="#" data-content="Experimentally derived unique sequence of the TGE, together with a table listing all the observations of this TGE." rel="popover" data-placement="left" data-original-title="Translated genomic elements (TGEs)" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+            <a class="btn pull-right popoverData"  data-content="Experimentally derived unique sequence of the TGE, together with a table listing all the observations of this TGE." rel="popover" data-placement="left" data-original-title="Translated genomic elements (TGEs)" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
           </div>
           
           <div class="panel-body">
@@ -127,7 +127,7 @@
         <div class="panel panel-default" id="massspec_stats">
           <div class="panel-heading ">
             <i class="fa fa-bar-chart-o fa-fw"></i> Mass-Spectrometry Data Statistics
-            <a class="btn pull-right popoverData" href="#" data-content="Summary of evidence underpinning the TGE across the whole database." rel="popover" data-placement="left" data-original-title="Summary of evidence" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+            <a class="btn pull-right popoverData"  data-content="Summary of evidence underpinning the TGE across the whole database." rel="popover" data-placement="left" data-original-title="Summary of evidence" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
           </div>
             
           <div class="panel-body collapse in">
