--- a/pit_app/templates/results/experiment.html
+++ b/pit_app/templates/results/experiment.html
@@ -10,6 +10,7 @@
         <li><a href="#expDescr"><i class="fa fa-info" aria-hidden="true" style="margin-left: 8px; padding-right:5px"></i> Description</a></li>
         <li><a href="#expGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
         <li><a href="#expBreakdown"><i class="fa fa-table fa-fw"></i> Experiment breakdown</a></li>
+        <li><a href="#tgeBreakdown"><i class="fa fa-table fa-fw"></i> TGE breakdown</a></li>
       </ul>
     </div>
   </div>
@@ -25,23 +26,23 @@
     	<div class="panel panel-default" id="expSummary">
         <div class="panel-heading">
           <i class="fa fa-comment-o fa-fw"></i> Summary
-          <a class="btn pull-right popoverData" href="#" data-content="Summary of information derived from this experiment." rel="popover" data-placement="left" data-original-title="Summary Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+          <a class="btn pull-right popoverData" data-content="Summary of information derived from this experiment." rel="popover" data-placement="left" data-original-title="Summary Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
         </div>
         
         <div class="panel-body">
           <div class="row" style="margin-left:5px">
             <!-- <label>Data submitted by the user:</label> {{ summary.user }}</br></br> -->
-            <label style="margin-top: 5px">TGEs <a class="popoverData" href="#" data-content="Total number of unique translated genomic elements observed in this experiment (some may have been identified more than once)" rel="popover" data-placement="bottom" data-original-title="Translated genomic element (TGE)" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.tgeNum }}</br>
-            <label>Samples <a class="popoverData" href="#" data-content="Number of individual sample in this experiment." rel="popover" data-placement="bottom" data-original-title="Samples" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.sampleNum }}</br>
-            <label>Transcripts <a class="popoverData" href="#" data-content="Number of unique transcripts assembled for RNA-seq data collected in this experiment." rel="popover" data-placement="bottom" data-original-title="Transcripts" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.trnNum }}<br/>
-            <label>Peptides <a class="popoverData" href="#" data-content="Number of peptides identified in this experiment using mass spectrometry." rel="popover" data-placement="bottom" data-original-title="Peptides" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.peptUniq }} 
+            <label style="margin-top: 5px">TGEs <a class="popoverData" data-content="Total number of unique translated genomic elements observed in this experiment (some may have been identified more than once)" rel="popover" data-placement="bottom" data-original-title="Translated genomic element (TGE)" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.tgeNum }}</br>
+            <label>Samples <a class="popoverData" data-content="Number of individual sample in this experiment." rel="popover" data-placement="bottom" data-original-title="Samples" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.sampleNum }}</br>
+            <label>Transcripts <a class="popoverData" data-content="Number of unique transcripts assembled for RNA-seq data collected in this experiment." rel="popover" data-placement="bottom" data-original-title="Transcripts" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.trnNum }}<br/>
+            <label>Peptides <a class="popoverData" data-content="Number of peptides identified in this experiment using mass spectrometry." rel="popover" data-placement="bottom" data-original-title="Peptides" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.peptUniq }} 
         	</div>
         </div>
       </div>
       <div class="panel panel-default" id="expSummary">
         <div class="panel-heading">
           <i class="fa fa-info" style="margin-left: 8px; padding-right:5px"></i> Description
-          <a class="btn pull-right popoverData" href="#" data-content="A brief summary of the experimental conditions. For more detailed information, see the associated publication." rel="popover" data-placement="left" data-original-title="Experiment Description" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+          <a class="btn pull-right popoverData" data-content="A brief summary of the experimental conditions. For more detailed information, see the associated publication." rel="popover" data-placement="left" data-original-title="Experiment Description" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
         </div>
         
         <div class="panel-body">
@@ -52,7 +53,7 @@
       <div id="expGraph" class="panel panel-default sunburst" style="position: relative !important;">
         <div class="panel-heading">
           <i class="fa fa-pie-chart fa-fw"></i> Graph
-          <a class="btn pull-right popoverData" href="#" data-content="Visual summary of the Translated Genomic Elements (TGEs) identified, together with their type and information about their supporting peptides. Move the mouse cursor over the plot for quantitative information." rel="popover" data-placement="left" data-original-title="Graph Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+          <a class="btn pull-right popoverData" data-content="Visual summary of the Translated Genomic Elements (TGEs) identified, together with their type and information about their supporting peptides. Move the mouse cursor over the plot for quantitative information." rel="popover" data-placement="left" data-original-title="Graph Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
         </div>
         
         <div class="col-md-8 col-md-offset-2">
@@ -69,23 +70,23 @@
       <div class="panel panel-default" id="expBreakdown">
         <div class="panel-heading">
             <i class="fa fa-table fa-fw"></i> Experiment breakdown
-            <a class="btn pull-right popoverData" href="#" data-content="Information about the samples analysed within the experiment." rel="popover" data-placement="left" data-original-title="Experiment Breakdown" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+            <a class="btn pull-right popoverData" data-content="Information about the samples analysed within the experiment." rel="popover" data-placement="left" data-original-title="Experiment Breakdown" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
         </div>
         
         <div class="panel-body">
             <table id = "smplTable" class="table table-striped table-bordered dataTable no-footer" >
             <thead>
               <tr>
-                <th>Sample ID&nbsp;<a class="popoverData" href="#" data-content="The accession number of a sample in the PITDB database." rel="popover" data-placement="bottom" data-original-title="Sample ID" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
-                <th>Sample Name&nbsp;<a class="popoverData" href="#" data-content="Detailed sample name" rel="popover" data-placement="bottom" data-original-title="Sample Name" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
-                <th>Instances of TGEs&nbsp;<a class="popoverData" href="#" data-content="Number of TGEs observed in each sample." rel="popover" data-placement="bottom" data-original-title="Instances of TGEs" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
-                <th>Unique Peptide Count&nbsp;<a class="popoverData" href="#" data-content="Number of unique peptides identified in this sample using mass spectrometry." rel="popover" data-placement="bottom" data-original-title="Peptide Count" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+                <!-- <th>Sample ID&nbsp;<a class="popoverData" data-content="The accession number of a sample in the PITDB database." rel="popover" data-placement="bottom" data-original-title="Sample ID" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th> -->
+                <th>Sample Name&nbsp;<a class="popoverData" data-content="Detailed sample name" rel="popover" data-placement="bottom" data-original-title="Sample Name" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+                <th>Instances of TGEs&nbsp;<a class="popoverData" data-content="Number of TGEs observed in each sample." rel="popover" data-placement="bottom" data-original-title="Instances of TGEs" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+                <th>Unique Peptide Count&nbsp;<a class="popoverData" data-content="Number of unique peptides identified in this sample using mass spectrometry." rel="popover" data-placement="bottom" data-original-title="Peptide Count" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
               </tr>
             </thead>
             <tbody>
               {% for sample in sampleList %}
                 <tr>
-                  <td>{{ sample.id }}</td>
+                  <!-- <td>{{ sample.id }}</td> -->
                   <td>{{ sample.name }}</td>
                   <td>{{ sample.tgeNum }}</td>
                   <td>{{ sample.pepNum }}</td>
@@ -94,6 +95,54 @@
             </tbody>
           </table>
         </div>
+      </div>
+
+
+      <div class="panel panel-default" id="tgeBreakdown">
+        <div class="panel-heading">
+          <i class="fa fa-table fa-fw"></i> Translated Genomic Elements (TGEs)
+          <a class="btn pull-right popoverData" data-content="List of experimentally TGEs that have been observed in this experiment." rel="popover" data-placement="left" data-original-title="Translated genomic elements (TGEs)" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+        </div>
+        
+        <div class="panel-body">
+          <table class="table table-striped table-bordered dataTable no-footer" id="exptgeTable" style="display: none;">
+          <thead>
+            <tr>
+              <th>TGE Accession&nbsp;<a class="popoverData" data-content="Unique identifier of a TGE in the PITDB database." rel="popover" data-placement="bottom" data-original-title="TGE Accession" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+              <th>TGE Type(s)&nbsp;<a class="popoverData" data-content="One TGE may have multiple types, as it may have a different status in different species. Use the table’s search and sort capabilities to look for specific TGEs or TGE types." rel="popover" data-placement="bottom" data-original-title="TGE Type(s)" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+              <th>Uniprot ID(s)&nbsp;<a class="popoverData" data-content="Accession number of homologous Uniprot protein (if there is one). Click the accession number to see what else the database knows about this protein." rel="popover" data-placement="bottom" data-original-title="Uniprot ID(s)" data-trigger="hover"><i class="fa fa-info-circle"></i></a></th>
+              <th>Organism(s)&nbsp;<a class="popoverData" data-content="The organism(s) in which the TGE has been observed." rel="popover" data-placement="bottom" data-original-title="Organism(s)" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for tge in tges %}
+              <tr>
+                <td>
+                <a href="tge?accession={{ tge.accession }}">{{ tge.accession }}</a>
+                </td>
+                <td>{{ tge.tge_class }}</td>
+                <td>
+                  {% for uniprotID in tge.uniprot_id.split(',') %}
+                    {% if uniprotID != '-' %}
+                      <a href="protein?uniprot={{ uniprotID }}">{{ uniprotID }}</a>
+                    {% else %}
+                      <span style="font-size:18px">{{ uniprotID }}</span>
+                    {% endif %}{% if not loop.last %},{% endif %}
+                  {% endfor %}</br>
+                </td>
+                <td>
+                  {% for organism in tge.organisms.split(',') %}
+                  {% if organism != '-' %}
+                    <a href="organism?organism={{ organism }}">{{ organism }}</a>
+                  {% else %}
+                    <span style="font-size:18px">{{ organism }}</span>
+                  {% endif %}{% if not loop.last %},{% endif %}
+                {% endfor %}</br>
+                </td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
